@@ -10,25 +10,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- ordering follows https://maven.apache.org/developers/conventions/code.html#POM_Code_Convention -->
-
     <parent>
         <groupId>wtf.metio.krei</groupId>
         <artifactId>krei</artifactId>
         <version>9999.99.99-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
 
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <!--                               COORDINATES                               -->
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <!-- https://maven.apache.org/pom.html#Maven_Coordinates -->
     <artifactId>krei-core</artifactId>
+    <name>krei :: core</name>
 
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <!--                               DEPENDENCIES                              -->
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <!-- https://maven.apache.org/pom.html#Dependencies -->
     <dependencies>
         <dependency>
             <groupId>org.immutables</groupId>
@@ -72,38 +62,14 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.7.0.202003110725-r</version>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${version.junit5}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${version.junit5}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${version.junit5}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
-
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <!--                                   BUILD                                 -->
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <!-- https://maven.apache.org/pom.html#Build -->
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.immutables</groupId>
@@ -115,27 +81,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <org.slf4j.simpleLogger.defaultLogLevel>off</org.slf4j.simpleLogger.defaultLogLevel>
-                    </systemPropertyVariables>
-                    <argLine>
-                        --enable-preview
-                        --add-opens wtf.metio.krei/wtf.metio.krei.construct.metio=ALL-UNNAMED
-                        --add-opens wtf.metio.krei/wtf.metio.krei.construct.community=ALL-UNNAMED
-                        --add-opens wtf.metio.krei/wtf.metio.krei.model=ALL-UNNAMED
-                        --add-opens wtf.metio.krei/wtf.metio.krei.template=ALL-UNNAMED
-                        --add-opens wtf.metio.krei/wtf.metio.krei.unit=ALL-UNNAMED
-                        --add-opens wtf.metio.krei/wtf.metio.krei.usecase=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>${version.m-assembly-p}</version>
                 <executions>
                     <execution>
                         <id>jshell-assembly</id>
@@ -150,23 +96,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>net.nicoulaj.maven.plugins</groupId>
-                <artifactId>checksum-maven-plugin</artifactId>
-                <version>${version.checksum-m-p}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>artifacts</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <algorithms>
-                        <algorithm>SHA-512</algorithm>
-                    </algorithms>
-                </configuration>
             </plugin>
         </plugins>
     </build>
